app/assets/stylesheets/application/modules/atoms/_highlights.scss
.a-highlights--center {
  display: flex;
  flex-direction: row;
  justify-content: center;

  .a-highlight {
    padding: 0 12px;
  }

  .a-highlight:last-child {
    border-right: 0 !important;
  }
}

.a-highlights {
  display: flex;
  flex-direction: column;
  padding: 10px 0;
  width: 125px;

  @media #{$from-medium} {
    flex-direction: row;
    width: 70%;

    .a-highlight:last-child {
      border-right: 0 !important;
    }

    .a-highlight:first-child {
      padding-left: 0;
    }
  }
}

.a-highlight {
  padding: 5px 0;
  @media #{$from-medium} {
    padding: 0 7px;
  }
}

